scripts/nullaway/original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8.txt
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:320: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static int[] readInts() {
                        ^
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:331: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static double[] readDoubles() {
                           ^
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:340: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static String[] readStrings() {
                           ^
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/tests/Test.java:50: error: [NullAway] initializer method does not guarantee @NonNull fields I (line 16), Q (line 18), Y (line 20), inventory (line 22), invcapacity (line 24), production (line 26), productionRel (line 28), D (line 32), inInv (line 34), N (line 38), M (line 40), R (line 42), V (line 48) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Test() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/QBnBVariable.java:37: error: [NullAway] read of @NonNull field name before initialization
		this.name=name;
		          ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/QBnBconstr.java:62: error: [NullAway] initializer method does not guarantee @NonNull field model (line 50) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public QBnBconstr(QBnBLinExp le, int type, double rs, String name, Model model) {
           ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:136: error: [NullAway] initializer method does not guarantee @NonNull fields U (line 26), L (line 32), id (line 37), A (line 48), c (line 53), b (line 59), x (line 67), type (line 88), I (line 94), ofle (line 118), simplex (line 130) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Model() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:583: error: [NullAway] assigning @Nullable expression to @NonNull field
		A=null;
		 ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:641: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexAlgorithm.java:189: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 33), N (line 39), xb (line 45), xn (line 51), rq (line 114) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	 public SimplexAlgorithm(double[][] A, double[] b, double[] c, String[] I, double[] U, double[] L, boolean print) {
	        ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexAlgorithm.java:214: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 33), N (line 39), xb (line 45), xn (line 51), rq (line 114), cb (line 57), cn (line 63), b (line 69), In (line 75), Ib (line 81), c (line 87), A (line 102), dual (line 108), Ub (line 120), Lb (line 126), Un (line 133), Ln (line 139), U (line 145), L (line 151), I (line 179) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	 public SimplexAlgorithm() {
	        ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields W (line 15), delta (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public KnapSavings() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:41: error: [NullAway] read of @NonNull field P before initialization
		x= new int[P.length];
		           ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexEJML.java:33: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 7), N (line 10), xb (line 12), xn (line 14), cb (line 16), cn (line 18), b (line 20), In (line 22), Ib (line 24), c (line 26), A (line 30) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SimplexEJML() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdOut.java:35: error: [NullAway] @NonNull static field out not initialized
    private static PrintWriter out;
                               ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:52: error: [NullAway] initializer method does not guarantee @NonNull fields first (line 40), last (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Queue() {
           ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:45: error: [NullAway] @NonNull field Queue$Node.item not initialized
        private Item item;
                     ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:46: error: [NullAway] @NonNull field Queue$Node.next not initialized
        private Node<Item> next;
                           ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:53: error: [NullAway] assigning @Nullable expression to @NonNull field
        first = null;
              ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:54: error: [NullAway] assigning @Nullable expression to @NonNull field
        last  = null;
              ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:92: error: [NullAway] assigning @Nullable expression to @NonNull field
        last.next = null;
                  ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:108: error: [NullAway] assigning @Nullable expression to @NonNull field
        if (isEmpty()) last = null;   // to avoid loitering
                            ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/BnB.java:30: error: [NullAway] initializer method does not guarantee @NonNull field priorityQueue (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public BnB(Model initial, QBnBEnv e) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:56: error: [NullAway] @NonNull static field scanner not initialized
    private static Scanner scanner;
                           ^
    (see http://t.uber.com/nullaway )
../original/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:124: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return line;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
22 errors
3 warnings
